# Psi0-Waldo

./: README.md  pyproject.toml
scripts/: download_post_trained.sh  train.py  (+3 more)
src/egovla/: .gitignore  deploy.sh  finetune.sh  flake.nix  hand_actuation_net.pth  hand_mano_retarget_net.pth  pyproject.toml  quick_start.md  test_serve.sh
src/egovla/VILA/: pyproject.toml
src/egovla/VILA/llava/: mm_utils.py
src/egovla/VILA/llava/cli/: analyze.py
src/egovla/VILA/llava/model/: builder.py  configuration_llava.py  llava_arch.py
src/egovla/VILA/llava/model/ego_vla_decoder/: builder.py  traj_decoder.py  transformer.py  vae.py
src/egovla/VILA/llava/model/language_model/: geodesic_loss.py  llava_llama.py  rotation_convert.py
src/egovla/VILA/llava/model/utils/: utils.py
src/egovla/VILA/llava/train/: llava_trainer.py  train.py  utils.py
src/egovla/VILA/llava/train/sequence_parallel/: globals.py  ulysses_attn.py
src/egovla/human_plan/: __init__.py  magic_path.py
src/egovla/human_plan/dataset_preprocessing/utils/: funcs.py  hf_dataset.py  language_response.py  mano_utils.py  transformations.py
src/egovla/human_plan/preprocessing/: preprocessing.py  prompting_format.py
src/egovla/human_plan/utils/: action_tokenizer.py  hand_dof.py  mano_to_robot.py  nn_retarget.py  nn_retarget_formano.py  nn_retarget_tomano.py  normalization.py  quantile.py  transformation.py  visualization.py
src/egovla/human_plan/utils/legacy/: nn_retarget.py
src/egovla/human_plan/utils/mano/: constants.py  forward.py  functions.py  mano_model.py  model.py  transformation_constants.py
src/egovla/human_plan/vila_eval/utils/: eval_func.py  load_model.py
src/egovla/human_plan/vila_train/: args.py  train.py  train_mem.py
src/egovla/tools/: lerobot_serve.py  lerobot_test_serve.py  parse_data.py  parse_data_v7.py  parse_initial_poses.py  parse_initial_poses_fixed_set.py  unzip.py
src/egovla/training_scripts/human_video_pretraining/: trans_v2_f1p30_split.sh
src/egovla/training_scripts/robot_finetuning/: hoi4dhot3dholotaco_p30_h5_transv2.sh  hoi4dhot3dholotaco_p30_h5_transv2_continual_lr2e-6.sh  lerobot_g1_finetune.sh  nopretrain_p30_h5_transv2.sh  nopretrain_p30_h5_transv2_continual_lr2e-6.sh
src/h_rdt/: README.md  deploy.sh  finetune_lerobot.sh  flake.nix  main.py  pyproject.toml  quick_start.md  test_serve.sh
src/h_rdt/configs/: hrdt_finetune_lerobot.yaml
src/h_rdt/datasets/: __init__.py  dataset.py
src/h_rdt/datasets/lerobot/: __init__.py  calc_stat.py  encode_lang_batch.py  lerobot_dataset.py
src/h_rdt/models/encoder/: dinosiglip_vit.py  t5_encoder.py
src/h_rdt/scripts/: eval_openloop_lerobot.py
src/h_rdt/tools/: hrdt_serve.py  hrdt_test_serve.py
src/h_rdt/train/: sample.py  train.py
(+26 files in other folders)
